--- a/index.html
+++ b/index.html
@@ -16,11 +16,15 @@
             <div class="stage column" id="viewport">
                 <h2>City</h2>
             </div>
-            <div class="log column">
-                <h2>Log</h2>
+            <div class="controls column">
+                <h2>Controls</h2>
+                <button class="btn_control" id="btn_start" data-type="start">Start</button>
+                <button class="btn_control" id="btn_stop" data-type="stop">Stop</button>
+                <ul class="log" id="simulation-log"></ul>
             </div>
         </div>
     </div>
+    <script src="js/jquery.min.js"></script>    
     <script src="js/app.js"></script>
 </body>
 </html>
