--- a/index.html
+++ b/index.html
@@ -4,27 +4,34 @@
     <link href="css/style.css" rel="stylesheet" />
 </head>
 <body>
-    <div class="container">
-        <header>
-            <h1>Super City: Simulation</h1>
-        </header>
-        <nav>
-            <a href="index.html">Simulation</a>
-            <a href="about.html">About</a>
-        </nav>
-        <div class="content">
-            <div class="stage column" id="viewport">
+    <div class="container-fluid">
+        <h1>Super City: Simulation</h1>
+        <div class="row">
+            <div class="col-sm-8" id="viewport">
                 <h2>City</h2>
             </div>
-            <div class="controls column">
+            <div class="col-sm-4">
                 <h2>Controls</h2>
-                <button class="btn_control" id="btn_start" data-type="start">Start</button>
-                <button class="btn_control" id="btn_stop" data-type="stop">Stop</button>
+                <div class="btn-group" role="group">
+                    <button class="btn btn-default btn_control" data-type="start">Start</button>
+                    <button class="btn btn-default btn_control" data-type="stop">Stop</button>
+                    <button class="btn btn-default btn_control" data-type="reset">Reset</button>
+                </div>
                 <ul class="log" id="simulation-log"></ul>
             </div>
         </div>
     </div>
-    <script src="js/jquery.min.js"></script>    
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="js/jquery.min.js"><\/script>')</script>
+    <script src="https://netdna.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+    <script>if(typeof($.fn.modal) === 'undefined') {document.write('<script src="js/bootstrap.min.js"><\/script>')}</script>
+    <!-- Bootstrap CSS local fallback -->
+    <script>
+        $(document).ready(function() {
+        var bodyColor = $('body').css('color');
+        if(bodyColor != 'rgb(51, 51, 51)') {
+        $("head").prepend('<link rel="stylesheet" href="css/bootstrap.min.css">');}});
+    </script>
     <script src="js/app.js"></script>
 </body>
 </html>
