--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
         if(bodyColor != 'rgb(51, 51, 51)') {
         $("head").prepend('<link rel="stylesheet" href="css/bootstrap.min.css">');}});
     </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r71/three.min.js"></script>
+    <script>
+        window.THREE || document.write('<script src="js/three.min.js"><\/script>')
+    </script>
     <script src="js/app.js"></script>
 </body>
 </html>
