--- a/index.html
+++ b/index.html
@@ -6,20 +6,13 @@
 <body>
     <div class="container-fluid">
         <h1>Super City: Simulation</h1>
-        <div class="row">
-            <div class="col-sm-8" id="viewport">
-                <h2>City</h2>
-            </div>
-            <div class="col-sm-4">
-                <h2>Controls</h2>
-                <div class="btn-group" role="group">
-                    <button class="btn btn-default btn_control" data-type="start">Start</button>
-                    <button class="btn btn-default btn_control" data-type="stop">Stop</button>
-                    <button class="btn btn-default btn_control" data-type="reset">Reset</button>
-                </div>
-                <ul class="log" id="simulation-log"></ul>
-            </div>
+        <div id="viewport"></div>
+        <div class="btn-group" role="group">
+            <button class="btn btn-default btn_control" data-type="start">Start</button>
+            <button class="btn btn-default btn_control" data-type="stop">Stop</button>
+            <button class="btn btn-default btn_control" data-type="reset">Reset</button>
         </div>
+        <ul class="log" id="simulation-log"></ul>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="js/jquery.min.js"><\/script>')</script>
@@ -36,6 +29,7 @@
     <script>
         window.THREE || document.write('<script src="js/three.min.js"><\/script>')
     </script>
+    <script src="js/Simulation.js"></script>
     <script src="js/app.js"></script>
 </body>
 </html>
