--- a/index.html
+++ b/index.html
@@ -14,21 +14,24 @@
         </div>
         <ul class="log" id="simulation-log"></ul>
     </div>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>-->
     <script>window.jQuery || document.write('<script src="js/jquery.min.js"><\/script>')</script>
-    <script src="https://netdna.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+    <!--<script src="https://netdna.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>-->
     <script>if(typeof($.fn.modal) === 'undefined') {document.write('<script src="js/bootstrap.min.js"><\/script>')}</script>
     <!-- Bootstrap CSS local fallback -->
     <script>
-        $(document).ready(function() {
-        var bodyColor = $('body').css('color');
-        if(bodyColor != 'rgb(51, 51, 51)') {
-        $("head").prepend('<link rel="stylesheet" href="css/bootstrap.min.css">');}});
+        // $(document).ready(function() {
+        // var bodyColor = $('body').css('color');
+        // if(bodyColor != 'rgb(51, 51, 51)') {
+        // $("head").prepend('<link rel="stylesheet" href="css/bootstrap.min.css">');}});
+        $("head").prepend('<link rel="stylesheet" href="css/bootstrap.min.css">');
     </script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r71/three.min.js"></script>
+    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r71/three.min.js"></script>-->
     <script>
         window.THREE || document.write('<script src="js/three.min.js"><\/script>')
     </script>
+    <script src="js/City.js"></script>
+    <script src="js/Model.js"></script>    
     <script src="js/Simulation.js"></script>
     <script src="js/app.js"></script>
 </body>
